--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,13 @@
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.3.2",
     "react": "^17.0.2",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
+    "react-countdown": "^2.3.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
+    "react-hover-animation": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
